objects/ServiceCloudDefaultQueue__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ServiceCloudDefaultQueue</label>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Email_Inbox__c</fullName>
        <label>External Email Inbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>